# fortuna-rp2040

./: .gitmodules  README.md  TODO.md  scratch.txt
.github/workflows/: build-firmware.yml
circuit/: circuit.kicad_sch
firmware/: CMakeLists.txt
firmware/src/: hw_config.c  main.c  sdcard.c  sdcard.h  statusled.c  statusled.h
firmware/src/_sdcard/: sd_present.c  sd_present.h  spi_io.c
